# Carnifex

./: .gitignore  .travis.yml  CONTRIBUTORS  ChangeLog.md  README  README.md  config.README  config.json  credentials.json  package.yaml  stack.yaml
app/: Main.hs
carnifex-proto/: .gitignore  package.yaml  stack.yaml
carnifex-proto/src/Carnifex/: EventFeed.proto  Reltime.hs  configuration.proto  live.proto  scoreboard.proto
carnifex-proto/src/Proto/: Carnifex.hs
carnifex-proto/src/Proto/Carnifex/: JSON.hs
carnifex-proto/src/Proto/Carnifex/JSON/: TH.hs
carnifex-proto/src/carnifex/: .configuration.proto.swp  common.proto  configuration.proto
src/: Lib.hs  MetaLib.hs
src/client/: CMakeLists.txt  Row_t.qml  ScoreText.qml  ScoreboardClient.cpp  ScoreboardClient.h  Team.qml  clock.cc  clock.h  config.json  helper.js  main.cpp  main.qml  qml.qrc  qmlproto.cpp  qmlproto.h  scoreboard.pb.cc  scoreboard.pb.h
src/client/artwork/: COPYING  Coat_of_arms_de-bw_Karlsruhe.svgz  Coat_of_arms_of_Dortmund.svgz  Coat_of_arms_of_Mainz-2008_new.svgz  Coat_of_arms_of_Potsdam.svgz  Coat_of_arms_of_Ulm.svgz  DEU_Bonn_COA.svgz  DEU_Goettingen_COA.svgz  ISL_Reykjavik_COA.svgz  Kaiserslautern-Stadtwappen.svgz  Muenchen_Kleines_Stadtwappen.svgz  Osnabrück_Wappen.svgz  Wappen_Erlangen.svgz  Wappen_Frankfurt_am_Main.svgz  Wappen_Landshut.svgz  Wappen_Lübeck.svgz  Wappen_des_Saarlands.svgz  Wappen_von_Wuerzburg.svgz  artwork.qrc  mapping.js
src/score/: client.go  state.go  structure.go
src/score/wire/: scoreboard.pb.go  scoreboard.proto
src/server/: main.go  tcplistener.go
